# MessageRust

./: .gitignore  Cargo.toml  README.md
migrations/: 20260307044912_create_messages_table.sql
src/: main.rs  state.rs
src/bloc/: message_bloc.rs  mod.rs
src/connection/: database.rs
src/data/: message_data.rs  mod.rs  pagination.rs
src/errors/: app_error.rs
src/handlers/: health_handler.rs  message_handler.rs  mod.rs
src/models/: message.rs  mod.rs
src/repositories/: message_repository.rs
src/routes/: message_router.rs  mod.rs
