[package]
name = "microservices_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"    
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
sqlx = {version = "0.8", features = ["sqlite", "runtime-tokio", "postgres", "macros"]}
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"]}
tower-http= { version = "0.5", features = ["trace"]}
